RESOLVED FIXED63487
Web process always pauses on launch
https://bugs.webkit.org/show_bug.cgi?id=63487
Summary Web process always pauses on launch
Jeff Miller
Reported 2011-06-27 15:01:35 PDT
The fix for bug 63335 in r89865 regressed the logic used to pause the web process. The web process now always pauses on launch when the the shift and alt keys were not held down, which means it almost always pauses.
Attachments
Patch (1.78 KB, patch)
2011-06-27 15:03 PDT, Jeff Miller
oliver: review+
Jeff Miller
Comment 1 2011-06-27 15:03:24 PDT
WebKit Review Bot
Comment 2 2011-06-27 15:07:22 PDT
Attachment 98795 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jeff Miller
Comment 3 2011-06-27 15:08:30 PDT
(In reply to comment #2) > Attachment 98795 [details] did not pass style-queue: > > Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 > > Source/WebKit2/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] > Total errors found: 1 in 2 files > > > If any of these errors are false positives, please file a bug against check-webkit-style. Whoops, I'll add the bug number before landing.
Jeff Miller
Comment 4 2011-06-27 15:12:33 PDT
Jon Honeycutt
Comment 5 2011-06-27 17:35:34 PDT
This regressed in <http://trac.webkit.org/changeset/89685>, not <http://trac.webkit.org/changeset/89865>. That's where this was fixed!
Adam Roben (:aroben)
Comment 6 2011-06-28 07:46:38 PDT
Comment on attachment 98795 [details] Patch Thanks for fixing this!
Note You need to log in before you can comment on or make changes to this bug.